--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "typeorm": "ts-node --project tsconfig.typeorm.json -r tsconfig-paths/register -r dotenv/config",
+    "migration:generate": "npm run typeorm -- ./node_modules/typeorm/cli.js migration:generate -d src/db/data-source.ts",
+    "migration:run": "npm run typeorm -- ./node_modules/typeorm/cli.js migration:run -d src/db/data-source.ts",
+    "migration:revert": "npm run typeorm -- ./node_modules/typeorm/cli.js migration:revert -d src/db/data-source.ts"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "dotenv": "^17.2.3",
     "next": "16.0.4",
     "openai": "^6.9.1",
     "pg": "^8.13.1",
@@ -27,6 +32,8 @@
     "eslint-config-next": "16.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
 }
