--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "next": "16.0.4",
     "openai": "^6.9.1",
@@ -21,6 +22,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "reflect-metadata": "^0.2.2",
+    "tailwind-merge": "^3.4.0",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
